--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <img src="img/Pas Foto.png" alt="Mas Siti Rifani Wulandari" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Mas Siti Rifani Wulandari</h1>
       <p class="lead">Family and Consumer Sciences Student at IPB University.</p>
+      <p> <i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/mrifaniw"class="text-black fw-bold">MS Rifani W</a></p>
+      <p><i class="bi bi-envelope-fill"></i> <a href="https://mrifaniw@gmail.com"class="text-black fw-bold">mrifaniw@gmail.com</a></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -61,12 +63,12 @@
           <h2>About Me</h2>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center">
+      <div class="row justify-content-evenly fs-5 text-center">
         <div class="col-md-4">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In culpa consectetur laborum consequatur mollitia aliquam dolores accusantium saepe vel eveniet?</p>
+         <p>Energetic and passionate college student working toward a S.Si in Family and Consumer Science at the IPB University. Based on my experience as students helped me to develop my skills such as willingness to learn, communication, leadership, problem solving ability, and empathy.</p>
         </div>
         <div class="col-md-4">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit temporibus repellendus et placeat? Aliquid voluptates architecto odio nesciunt eos. Amet!</p>
+          <p>I have strong interest to working as Human Resources Development. Based on that, I took Human Resource Management course. To strengthen my knowledge. I also learned to become a counselor through Family Counseling courses. Another activities beyond my academics, I also followed social activities that got me must faced different person.</p>
         </div>
       </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
