mengubah teks dan format

--- a/index.html
+++ b/index.html
@@ -94,23 +94,26 @@
             <div class="card">
               <img src="img/1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center fw-bold">Academic Project</p>
+                <p class="card-text text-center">A field trip aimed at observing children. The output of this activity is a final report. In addition, this activity sharpens critical thinking and the ability to analyze data.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/2.jpg" class="card-img-top" alt="...">
+              <img src="img/4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center fw-bold">KKN Journey</p>
+                <p class="card-text text-center">My experience as the head of KKN-T in Pasirmulya Village, Bandung Regency. While in the village, I learned many things such as the art of communicating with villagers. In addition, I had the opportunity to be a presenter of material about the contents of Isi Piringku and clean and healthy living behavior aimed at children. One of the most valuable experiences that I will never forget. This is because it trained me to be more empathetic, communicate well and correctly, and good emotional management.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/3.jpg" class="card-img-top" alt="...">
+              <img src="img/5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center fw-bold">Panti Goceng Community</p>
+                <p class="card-text text-center">This project made me responsible for making sure each event ran smoothly. Project Pegasus was held twice. First, we made an activity to foster hope in every child, where the children wrote down their dreams for the future. Secondly, we collaborated with IPB Ambassadors to conduct an activity to make salted eggs with rubbing ash. Furthermore, in the International Webinar, I was responsible for scripting <a herf="https://www.instagram.com/tv/CUMZQBbJ0EU/?igshid=NDk5N2NlZjQ=" class="text-bold">the profile video</a> of Panti Goceng. In addition, I created the Panti Goceng curriculum under the name "WISE". </p>
               </div>
             </div>
           </div>
