--- a/index.html
+++ b/index.html
@@ -120,17 +120,22 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/3.jpg" class="card-img-top" alt="...">
+              <img src="img/6.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center fw-bold">Script Behind Video "Non Eras"</p>
+                <p class="card-text text-center">The video "Non Eras" was entered into the faculty-level competition FAMNIGHT 2020. I became the scriptwriter for this video. Starting from creating video titles, storylines, strings of sentences spoken by the narrator, and suggestions for video concepts.</p>
+                <p class="card-text text-center"><a href="https://youtu.be/aNOa-fYxo9c" class="card-text text-center fw-bold">Start from 45.55-49.53</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/3.jpg" class="card-img-top" alt="...">
+              <img src="img/7.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center fw-bold">Write an Article</p>
+                <p class="card-text text-center">Based on the information, I joined KKN-T IPB 2022. Some of the outputs that had to be collected were articles. I wrote two articles on Kompasiana. The articles were about the programs we initiated.</p>
+                <p class="card-text text-center fw-bold"><a href="https://www.kompasiana.com/rifaniwulandari/62df984e08a8b509d719fed2/mahasiswa-ipb-mengajak-anak-tk-hingga-sd-untuk-menerapkan-isi-piringku-melalui-fun-learning-di-rw-04-desa-pasirmulya">Article 1</a></p>
+                <p class="card-text text-center fw-bold"><a href="https://www.kompasiana.com/rifaniwulandari/62f717633555e41326033d23/habiko-menjadi-sarana-anak-rw-04-desa-pasirmulya-mengenal-pengelolaan-sampah-plastik-melalui-ajakan-mahasiswa-ipb">Article 2</a></p>
               </div>
             </div>
           </div>
@@ -150,20 +155,28 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-8">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+              <strong>Terima Kasih!</strong> Pesan Anda telah Kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="contact-me-portofolio">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="nama" aria-describedby="name">
+                <input type="text" class="form-control" id="nama" aria-describedby="name" name="nama"/>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email">
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email"/>
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -178,5 +191,32 @@
    </footer>
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script>
+      const scriptURL = '<https://script.google.com/macros/s/AKfycbwxmGLY32IURL-dAhwHLnl-PQZA8GNrBVHZtHbd24qN3ZK4xa04tfmwq6j5C_qsMNY_/exec>'
+      const form = document.forms['contact-me-portofolio'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myALert = document.querySelector('.my-alert');
+
+      form.addEventListener('submit', e => {
+        e.preventDefault();
+        //ketika tombol submit diklik
+        //tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then((response) => {
+            //tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            //tampilkan alert
+            myAlert.classList.toggle('d-none');
+            //reset formnya
+            form.reset();
+            console.log('Success!', response);
+          })
+          .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
