menambahkan beberapa foto dan kalimat

--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
               <img src="img/5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text text-center fw-bold">Panti Goceng Community</p>
-                <p class="card-text text-center">This project made me responsible for making sure each event ran smoothly. Project Pegasus was held twice. First, we made an activity to foster hope in every child, where the children wrote down their dreams for the future. Secondly, we collaborated with IPB Ambassadors to conduct an activity to make salted eggs with rubbing ash. Furthermore, in the International Webinar, I was responsible for scripting the profile video of Panti Goceng. In addition, I created the Panti Goceng curriculum under the name "WISE". </p>
+                <p class="card-text text-center">This project made me responsible for making sure each event ran smoothly. Project Pegasus was held twice. First, we made an activity to foster hope in every child, where the children wrote down their dreams for the future. Secondly, we collaborated with IPB Ambassadors to conduct an activity to make salted eggs with rubbing ash.</p>
+                <p class="card-text text-center"> Furthermore, I was responsible for scripting the profile video of Panti Goceng, Panti Goceng's Kaleidoscope 2020, and script content to celebrate National Children's Day 2021. Also, I created the Panti Goceng curriculum under the name "WISE". </p>
                 <p class="card-text text-center"><a href="https://www.instagram.com/tv/CUMZQBbJ0EU/?igshid=NDk5N2NlZjQ=" class="card-text text-center fw-bold">Video Profil</a></p>
+                <p class="card-text text-center"><a href="https://youtu.be/xEkMyXa7DyM" class="card-text text-center fw-bold">Video Kaleidoskop 2020</a></p>
+                <p class="card-text text-center"><a href="https://www.instagram.com/tv/CRqFePygyUd/?igshid=ZmRlMzRkMDU=" class="card-text text-center fw-bold">Video Hari Anak Nasional</a></p>
               </div>
             </div>
           </div>
