--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -110,10 +113,10 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/5.jpg" class="card-img-top" alt="...">
+              <img src="img/8.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text text-center fw-bold">Panti Goceng Community</p>
-                <p class="card-text text-center">This project made me responsible for making sure each event ran smoothly. Project Pegasus was held twice. First, we made an activity to foster hope in every child, where the children wrote down their dreams for the future. Secondly, we collaborated with IPB Ambassadors to conduct an activity to make salted eggs with rubbing ash.</p>
+                <p class="card-text text-center">Project Pegasus made me responsible for making sure each event ran smoothly. Project Pegasus was held twice. First, we made an activity to foster hope in every child, where the children wrote down their dreams for the future. Secondly, we collaborated with IPB Ambassadors to conduct an activity to make salted eggs with rubbing ash.</p>
                 <p class="card-text text-center"> Furthermore, I was responsible for scripting the profile video of Panti Goceng, Panti Goceng's Kaleidoscope 2020, and script content to celebrate National Children's Day 2021. Also, I created the Panti Goceng curriculum under the name "WISE". </p>
                 <p class="card-text text-center"><a href="https://www.instagram.com/tv/CUMZQBbJ0EU/?igshid=NDk5N2NlZjQ=" class="card-text text-center fw-bold">Video Profil</a></p>
                 <p class="card-text text-center"><a href="https://youtu.be/xEkMyXa7DyM" class="card-text text-center fw-bold">Video Kaleidoskop 2020</a></p>
@@ -148,6 +151,65 @@
     </section>
     <!--Akhir Projects-->
 
+    <!--Skills-->
+    <section id="skills">
+      <div class="container">
+        <div class="row text-center mb-5">
+          <div class="col">
+            <h2>Skills</h2>
+          </div>
+        </div>
+      </div>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/14-1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Operate Microsoft Tools</h5>
+              <p>I still don't know much about Microsoft functions in detail. But, I really like learning new things about Microsoft tools.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/15-1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Operate Google Tools</h5>
+              <p>During college, I used google docs more than google spreedsheet and google slides. But I have basic knowledge of google spreedsheet and google slides. I believe with my ability, I can learn to operate them more professionally.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/16-1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Operate Canva</h5>
+              <p>During college, I often used Canva to create booklets, leaflets, posters, videos, powerpoints, and so on. I believe that I can develop it more professionally.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/17.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Soft Skills</h5>
+              <p>My experiences on campus, in the community, and in organizations have improved some of my soft skills. Among them are time management, eagerness to learn new things, practicing writing skills, empathy, collaboration, teamwork, responsibility, responsiveness, social skills, leadership, and communication.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#a2e1fa" fill-opacity="1" d="M0,96L48,106.7C96,117,192,139,288,133.3C384,128,480,96,576,106.7C672,117,768,171,864,181.3C960,192,1056,160,1152,144C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section>
+    <!--Akhir Skills-->
+
     <!--Contact-->
     <section id="contact">
       <div class="container">
@@ -162,7 +224,7 @@
               <strong>Terima Kasih!</strong> Pesan Anda telah Kami terima.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            <form name="contact-me-portofolio">
+            <form name="contact-me">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="nama" aria-describedby="name" name="nama"/>
@@ -195,8 +257,8 @@
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script>
-      const scriptURL = '<https://script.google.com/macros/s/AKfycbwxmGLY32IURL-dAhwHLnl-PQZA8GNrBVHZtHbd24qN3ZK4xa04tfmwq6j5C_qsMNY_/exec>'
-      const form = document.forms['contact-me-portofolio'];
+      const scriptURL = '<https://script.google.com/macros/s/AKfycbyzp61u2hWeQC-NLnyykXvyvYno8psKynj5F7hJt3CkBOncS3GOazvLy-uoALQo0DVnHA/exec>'
+      const form = document.forms['contact-me'];
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
       const myALert = document.querySelector('.my-alert');
