menambah dan mengubah format dan gambar

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p>I have strong interest to working as Human Resources Development. Based on that, I took Human Resource Management course. To strengthen my knowledge. I also learned to become a counselor through Family Counseling courses. Another activities beyond my academics, I also followed social activities that got me must faced different person.</p>
         </div>
       </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg style="margin-left: -15rem; margin-right: -15rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path 
           fill="#a2e1fa" 
           fill-opacity="1" 
@@ -142,6 +142,15 @@
                 <p class="card-text text-center">Based on the information, I joined KKN-T IPB 2022. Some of the outputs that had to be collected were articles. I wrote two articles on Kompasiana. The articles were about the programs we initiated.</p>
                 <p class="card-text text-center fw-bold"><a href="https://www.kompasiana.com/rifaniwulandari/62df984e08a8b509d719fed2/mahasiswa-ipb-mengajak-anak-tk-hingga-sd-untuk-menerapkan-isi-piringku-melalui-fun-learning-di-rw-04-desa-pasirmulya">Article 1</a></p>
                 <p class="card-text text-center fw-bold"><a href="https://www.kompasiana.com/rifaniwulandari/62f717633555e41326033d23/habiko-menjadi-sarana-anak-rw-04-desa-pasirmulya-mengenal-pengelolaan-sampah-plastik-melalui-ajakan-mahasiswa-ipb">Article 2</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/19.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text text-center fw-bold">Fantasy 5.0</p>
+                <p class="card-text text-center">In this activity, I became an Event Staff in charge of the Fantasy 5.0 Pre-Event. I was responsible for distributing tasks to other members, conceptualizing the event, and creating terms of reference.</p>
               </div>
             </div>
           </div>
@@ -213,40 +222,20 @@
     <!--Contact-->
     <section id="contact">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-left mb-3">
           <div class="col">
             <h2>Contact Me</h2>
           </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
-              <strong>Terima Kasih!</strong> Pesan Anda telah Kami terima.
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          <div class="d-flex position-relative">
+            <img src="img/18.jpg" class="flex-shrink-0 me-3" style="width: 300px;" alt="...">
+            <div>
+              <h5 class="mt-0">Click the link</h5>
+              <p>If you'd like to leave me a message, you can fill out the form at this link.</p>
+              <a href="https://forms.gle/TvFJyfexMbpbZxkU7" class="stretched-link">This link</a>
             </div>
-            <form name="contact-me">
-              <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="nama" aria-describedby="name" name="nama"/>
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" name="email"/>
-              </div>
-              <div class="mb-3">
-                <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
-              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                Loading...
-              </button>
-            </form>
           </div>
-        </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,234.7C960,256,1056,224,1152,202.7C1248,181,1344,171,1392,165.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg style="margin-left: -8rem; margin-right: -8rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,234.7C960,256,1056,224,1152,202.7C1248,181,1344,171,1392,165.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!--Akhir Contact-->
 
@@ -255,33 +244,6 @@
     <p>Created with <i class="bi bi-balloon-heart-fill text-danger"></i> by <a href="https://www.instagram.com/fanipuan" class="text-white fw-bold">Mas Siti Rifani Wulandari</a></p>
    </footer>
     <!--Akhir Footer-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script>
-      const scriptURL = '<https://script.google.com/macros/s/AKfycbyzp61u2hWeQC-NLnyykXvyvYno8psKynj5F7hJt3CkBOncS3GOazvLy-uoALQo0DVnHA/exec>'
-      const form = document.forms['contact-me'];
-      const btnKirim = document.querySelector('.btn-kirim');
-      const btnLoading = document.querySelector('.btn-loading');
-      const myALert = document.querySelector('.my-alert');
 
-      form.addEventListener('submit', e => {
-        e.preventDefault();
-        //ketika tombol submit diklik
-        //tampilkan tombol loading, hilangkan tombol kirim
-        btnLoading.classList.toggle('d-none');
-        btnKirim.classList.toggle('d-none');
-        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then((response) => {
-            //tampilkan tombol kirim, hilangkan tombol loading
-            btnLoading.classList.toggle('d-none');
-            btnKirim.classList.toggle('d-none');
-            //tampilkan alert
-            myAlert.classList.toggle('d-none');
-            //reset formnya
-            form.reset();
-            console.log('Success!', response);
-          })
-          .catch((error) => console.error('Error!', error.message));
-      });
-    </script>
   </body>
 </html>
