--- a/index.html
+++ b/index.html
@@ -162,60 +162,45 @@
 
     <!--Skills-->
     <section id="skills">
-      <div class="container">
-        <div class="row text-center mb-5">
+      <div class="container text-center">
+        <div class="row align-items-start">
           <div class="col">
             <h2>Skills</h2>
           </div>
         </div>
+        <div class="row justify-content-evenly">
+          <div class="col-md-4 mb-3">
+            <figure class="figure">
+              <img src="img/14-1.jpg" class="figure-img img-fluid rounded" alt="...">
+              <figcaption class="figure-caption"><h3>Operate Microsoft Tools</h3></figcaption>
+              <figcaption class="figure-caption">I still don't know much about Microsoft functions in detail. But, I really like learning new things about Microsoft tools.</figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4 mb-3">
+            <figure class="figure">
+              <img src="img/15-1.jpg" class="figure-img img-fluid rounded" alt="...">
+              <figcaption class="figure-caption"><h3>Operate Google Tools</h3></figcaption>
+              <figcaption class="figure-caption">During college, I used google docs more than google spreedsheet and google slides. But I have basic knowledge of google spreedsheet and google slides. I believe with my ability, I can learn to operate them more professionally.</figcaption>
+            </figure>
+          </div>
       </div>
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <div class="row justify-content-evenly">
+        <div class="col-md-4 mb-3">
+          <figure class="figure">
+            <img src="img/16-1.jpg" class="figure-img img-fluid rounded" alt="...">
+            <figcaption class="figure-caption"><h3>Operate Canva</h3></figcaption>
+            <figcaption class="figure-caption">During college, I often used Canva to create booklets, leaflets, posters, videos, powerpoints, and so on. I believe that I can develop it more professionally.</figcaption>
+          </figure>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/14-1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Operate Microsoft Tools</h5>
-              <p>I still don't know much about Microsoft functions in detail. But, I really like learning new things about Microsoft tools.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/15-1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Operate Google Tools</h5>
-              <p>During college, I used google docs more than google spreedsheet and google slides. But I have basic knowledge of google spreedsheet and google slides. I believe with my ability, I can learn to operate them more professionally.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/16-1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Operate Canva</h5>
-              <p>During college, I often used Canva to create booklets, leaflets, posters, videos, powerpoints, and so on. I believe that I can develop it more professionally.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/17.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Soft Skills</h5>
-              <p>My experiences on campus, in the community, and in organizations have improved some of my soft skills. Among them are time management, eagerness to learn new things, practicing writing skills, empathy, collaboration, teamwork, responsibility, responsiveness, social skills, leadership, and communication.</p>
-            </div>
-          </div>
+        <div class="col-md-4 mb-3">
+          <figure class="figure">
+            <img src="img/17.jpg" class="figure-img img-fluid rounded" alt="...">
+            <figcaption class="figure-caption"><h3>Soft Skills</h3></figcaption>
+            <figcaption class="figure-caption">My experiences on campus, in the community, and in organizations have improved some of my soft skills. Among them are time management, eagerness to learn new things, practicing writing skills, empathy, collaboration, teamwork, responsibility, responsiveness, social skills, leadership, and communication.</figcaption>
+          </figure>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#a2e1fa" fill-opacity="1" d="M0,96L48,106.7C96,117,192,139,288,133.3C384,128,480,96,576,106.7C672,117,768,171,864,181.3C960,192,1056,160,1152,144C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg style="margin-left: -7.3rem; margin-right: -7.3rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#a2e1fa" fill-opacity="1" d="M0,96L48,106.7C96,117,192,139,288,133.3C384,128,480,96,576,106.7C672,117,768,171,864,181.3C960,192,1056,160,1152,144C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!--Akhir Skills-->
 
