menambah tulisan baru

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <img src="img/Pas Foto.png" alt="Mas Siti Rifani Wulandari" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Mas Siti Rifani Wulandari</h1>
       <p class="lead">Family and Consumer Sciences Student at IPB University.</p>
+      <p class="lead fst-italic fs-6">Live in Bogor, Indonesia.</p>
+      <p class="lead fst-italic fs-6">Since 29 March 2002</p>
       <p> <i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/mrifaniw"class="text-black fw-bold">MS Rifani W</a></p>
       <p><i class="bi bi-envelope-fill"></i> <a href="https://mrifaniw@gmail.com"class="text-black fw-bold">mrifaniw@gmail.com</a></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
