menambahkan pengalaman kerja

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
           <p>I have strong interest to working as Human Resources Development. Based on that, I took Human Resource Management course. To strengthen my knowledge. I also learned to become a counselor through Family Counseling courses. Another activities beyond my academics, I also followed social activities that got me must faced different person.</p>
         </div>
       </div>
+      <div class="row text-center mb-3">
+        <div class="col">
+          <h2>Working Experiences</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="img/20.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center fw-bold">Internship at Labschool IPB-ISFA</p>
+              <p class="card-text text-center fst-italic">Since December 2022 until 2023.</p>
+              <p class="card-text text-center">My role in this internship is as a co-teacher. The main task is to assist the main teacher in preparing teaching media and designing classroom needs. I assisted in teaching the pre-kindergarten and toddler classes.</p>
+            </div>
+          </div>
+        </div>
+      </div>
         <svg style="margin-left: -7.3rem; margin-right: -7.3rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path 
           fill="#a2e1fa" 
